--- a/.i3status.conf
+++ b/.i3status.conf
@@ -1,31 +1,36 @@
-# i3status configuration file.
-# see "man i3status" for documentation.
-
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
-
 general {
         colors = true
         interval = 1
 }
 
-order += "disk /"
+order += "ethernet enp4s0"
+order += "wireless wlan0"
+order += "memory"
 order += "battery all"
 order += "tztime local"
 
+
+memory {
+format = "%used"
+}
+
 battery all {
         format = "%status %percentage %remaining"
+
 }
 
 tztime local {
         format = "%d-%m-%Y %H:%M:%S"
+	timezone = "Europe/Stockholm"
 }
 
-
-disk "/" {
-        format = "%avail"
+ethernet enp4s0 {
+    format_up = "up"
+    format_down = "down"
 }
 
+wireless wlan0 {
+    format_up = "%essid %quality"
+    format_down = "down"
+}
 
