multi monitor script

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -1,20 +1,8 @@
 
 [youtube-music]
-command=~/.config/i3blocks/youtube-music-title.sh
-interval=5
-
-[net-speed]
-command=~/.config/i3blocks/net_speed.sh
-interval=5
+command=/.config/i3blocks/youtube-music-title.sh
+interval=1
 
 [time]
 command=date '+%H:%M:%S %d-%m-%Y'
 interval=1
-
-[battery]
-command=~/.config/i3blocks/battery_status.sh
-interval=30
-
-
-
-
