--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,7 +12,7 @@
 set $mod Mod1
 
 # Turn off all screens
-exec_always --no-startup-id ~/.config/i3/screen-config.sh
+exec_always --no-startup-id ~/.config/i3/scripts/screen-config.sh
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -30,13 +30,13 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # set bg 
-exec_always --no-startup-id xsetroot -solid "#282828"
+exec_always --no-startup-id xsetroot -solid "#000000"
 
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +2% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -2% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -44,13 +44,16 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Shift+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec alacritty
+
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -modi drun -show drun \
+		-config ~/.config/rofi/rofidmenu.rasi
+
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -58,119 +61,119 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+		bindsym $mod+j focus left
+		bindsym $mod+k focus down
+		bindsym $mod+l focus up
+		bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+		bindsym $mod+Left focus left
+		bindsym $mod+Down focus down
+		bindsym $mod+Up focus up
+		bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+		bindsym $mod+Shift+j move left
+		bindsym $mod+Shift+k move down
+		bindsym $mod+Shift+l move up
+		bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+		bindsym $mod+Shift+Left move left
+		bindsym $mod+Shift+Down move down
+		bindsym $mod+Shift+Up move up
+		bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+		bindsym $mod+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+		bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+		bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+		bindsym $mod+s layout stacking
+		bindsym $mod+w layout tabbed
+		bindsym $mod+e layout toggle split
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+		bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+		bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+		set $ws1 "1"
+		set $ws2 "2"
+		set $ws3 "3"
+		set $ws4 "4"
+		set $ws5 "5"
+		set $ws6 "6"
+		set $ws7 "7"
+		set $ws8 "8"
+		set $ws9 "9"
+		set $ws10 "10"
 
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+		bindsym $mod+1 workspace number $ws1
+		bindsym $mod+2 workspace number $ws2
+		bindsym $mod+3 workspace number $ws3
+		bindsym $mod+4 workspace number $ws4
+		bindsym $mod+5 workspace number $ws5
+		bindsym $mod+6 workspace number $ws6
+		bindsym $mod+7 workspace number $ws7
+		bindsym $mod+8 workspace number $ws8
+		bindsym $mod+9 workspace number $ws9
+		bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+		bindsym $mod+Shift+1 move container to workspace number $ws1
+		bindsym $mod+Shift+2 move container to workspace number $ws2
+		bindsym $mod+Shift+3 move container to workspace number $ws3
+		bindsym $mod+Shift+4 move container to workspace number $ws4
+		bindsym $mod+Shift+5 move container to workspace number $ws5
+		bindsym $mod+Shift+6 move container to workspace number $ws6
+		bindsym $mod+Shift+7 move container to workspace number $ws7
+		bindsym $mod+Shift+8 move container to workspace number $ws8
+		bindsym $mod+Shift+9 move container to workspace number $ws9
+		bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+		bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+		bindsym $mod+Shift+r restart
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
+		mode "resize" {
 # These bindings trigger as soon as you enter the resize mode
 
 # Pressing left will shrink the window’s width.
 # Pressing right will grow the window’s width.
 # Pressing up will shrink the window’s height.
 # Pressing down will grow the window’s height.
-	bindsym j resize shrink width 10 px or 10 ppt
-		bindsym k resize grow height 10 px or 10 ppt
-		bindsym l resize shrink height 10 px or 10 ppt
-		bindsym semicolon resize grow width 10 px or 10 ppt
+			bindsym j resize shrink width 10 px or 10 ppt
+				bindsym k resize grow height 10 px or 10 ppt
+				bindsym l resize shrink height 10 px or 10 ppt
+				bindsym semicolon resize grow width 10 px or 10 ppt
 
 # same bindings, but for the arrow keys
-		bindsym Left resize shrink width 10 px or 10 ppt
-		bindsym Down resize grow height 10 px or 10 ppt
-		bindsym Up resize shrink height 10 px or 10 ppt
-		bindsym Right resize grow width 10 px or 10 ppt
+				bindsym Left resize shrink width 10 px or 10 ppt
+				bindsym Down resize grow height 10 px or 10 ppt
+				bindsym Up resize shrink height 10 px or 10 ppt
+				bindsym Right resize grow width 10 px or 10 ppt
 
 # back to normal: Enter or Escape or $mod+r
-		bindsym Return mode "default"
-		bindsym Escape mode "default"
-		bindsym $mod+r mode "default"
-}
+				bindsym Return mode "default"
+				bindsym Escape mode "default"
+				bindsym $mod+r mode "default"
+		}
 
 bindsym $mod+r mode "resize"
 
@@ -187,60 +190,34 @@ mode "exit: [l]ogout, [r]eboot, [h]ibernate, [s]leep, [p]oweroff" {
 
 bindsym $mod+Shift+e mode "exit: [l]ogout, [r]eboot, [h]ibernate, [s]leep, [p]oweroff"
 
+# Screenshot
+bindsym Print exec --no-startup-id scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/Pictures/$(date +"%Y-%m-%d-%T")-screenshot.png"
+
 
 # font used by i3 for titles and bars
-font pango:monospace 12
+font pango: JetBrains Mono 13
+
 
 # Border
 default_border pixel 2
 default_floating_border none
 hide_edge_borders smart
 
-# Colors (Gruvbox Material Dark)
-set $bg       #282828
-set $fg       #d4be98
-set $red      #ea6962
-set $orange   #e78a4e
-set $green    #a9b665
-set $blue     #7daea3
-set $purple   #d3869b
-set $aqua     #89b482
-set $darkgray #282828
-
-# Class                 border 	    backgr	text    indicator   child_border
-client.focused          $fg	    $fg		$bg     $fg         $blue
-client.focused_inactive $aqua       $aqua       $bg     $aqua       $aqua
-client.unfocused        $bg         $bg         $bg     $bg         $bg
-client.urgent           $red        $red        $bg     $red        $red
-
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	status_command i3blocks
+	status_command i3blocks -c ~/.config/i3/i3blocks.conf
 		output DP-4
-		colors {
-# bar background color
-			background $bg
-# text color used for blocks that do not have a color specified.
-				statusline $lightgray
-# workspaces section
-#                    border    backgr.   text
-				focused_workspace    $blue     $blue     $bg
-				inactive_workspace   $darkgray $darkgray $lightgray
-				active_workspace     $darkgray $darkgray $lightgray
-				urgent_workspace     $red      $red      $bg
-		}
 }
 
 
-
-# Start firefox on workspace 2
-exec --no-startup-id i3-msg 'workspace 2; exec firefox'
-
-# Start Youtube Music on workspace 10
+# Start Youtube Music
 exec --no-startup-id i3-msg 'workspace 10; exec youtube-music'
 
-# Start Telegram desktop on workspace 10
+# Start Telegram desktop
 exec --no-startup-id i3-msg 'workspace 10; exec telegram-desktop'
+
+# Change Keyboard Layout
+exec_always "setxkbmap -model pc104 -layout us,se,ru -option grp:win_space_toggle"
 
