--- a/.config/alacritty/gruvbox_light.toml
+++ b/.config/alacritty/gruvbox_light.toml
@@ -1,11 +1,9 @@
-# Colors (Gruvbox light)
-
 # Default colors
 [colors.primary]
 # hard contrast background = = '#f9f5d7'
-background = '#fbf1c7'
+background = '#000'
 # soft contrast background = = '#f2e5bc'
-foreground = '#3c3836'
+foreground = '#000'
 
 # Normal colors
 [colors.normal]
