--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -2,15 +2,25 @@
 command=~/.config/i3/scripts/youtube-music-title
 interval=1
 
-[volume-pulseaudio]
-command=~/.config/i3/scripts/volume
-instance=Master
 
-interval=1
 [keyboard-layout]
 command=~/.config/i3/scripts/keyboard_layout
 interval=1
 
 [time]
 command=date '+%H:%M:%S %d-%m-%Y' 
+interval=1
+
+
+[volume-pulseaudio]
+command=~/.config/i3/scripts/volume
+instance=Master
+interval=1
+
+[birghntess]
+command=~/.config/i3/scripts/brightness
+interval=1
+
+[battery]
+command=~/.config/i3/scripts/battery_status
 interval=1
