--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,23 +1,23 @@
 [youtube-music]
 command=~/.config/i3/scripts/youtube-music-title
+min_width=1730
+align=center
 interval=1
-
 
 [keyboard-layout]
 command=~/.config/i3/scripts/keyboard_layout
 interval=1
 
 [time]
-command=date '+%H:%M:%S %d-%m-%Y' 
+command=~/.config/i3/scripts/date_jp
 interval=1
-
 
 [volume-pulseaudio]
 command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
 
-[birghntess]
+[brightness]
 command=~/.config/i3/scripts/brightness
 interval=1
 
