--- a/.ideavimrc
+++ b/.ideavimrc
@@ -2,17 +2,20 @@
 " =========================================
 
 " General Settings
-set clipboard+=unnamed
-set scrolloff=15
-set number
-set relativenumber
-set showcmd
-set autoindent
-set backspace=indent,eol,start
-set hlsearch
-set ignorecase
-set incsearch
-set smartcase
+set clipboard+=unnamed         " Use the system clipboard for all yank, delete, change, and put operations
+set scrolloff=15               " Keep 15 lines visible above and below the cursor
+set number                     " Show absolute line numbers
+set relativenumber             " Show relative line numbers
+set showcmd                    " Display incomplete commands in the status line
+set autoindent                 " Automatically set indent of new lines to match the previous line
+set backspace=indent,eol,start " Allow backspace over autoindent, line breaks, and insert start
+
+" Search Settings
+set hlsearch                   " Highlight search results
+set ignorecase                 " Ignore case in search patterns
+set incsearch                  " Show partial matches as search pattern is typed
+set smartcase                  " Override 'ignorecase' if search pattern contains uppercase letters
+
 
 let mapleader = " "
 
@@ -20,6 +23,7 @@ let mapleader = " "
 set ideajoin
 set ideastatusicon=gray
 set idearefactormode=keep
+
 " Plugin Settings
 " =========================================
 set highlightedyank
@@ -30,18 +34,16 @@ set commentary
 
 " 3rd Party Plugins
 set easymotion
+let g:EasyMotion_do_mapping=0
 
 " Turn Off Sound Error
 set noerrorbells
 set visualbell
 
-let g:EasyMotion_do_mapping=0
-
 " Key Mapping
 " =========================================
 
 " Insert Mode Mapping
-inoremap <C-c> <ESC>
 inoremap <C-y> :action EditorPaste<CR>
 nnoremap <C-l> :noh<CR>
 
@@ -58,8 +60,8 @@ nnoremap <C-j>   :action MethodDown<CR>
 nnoremap <C-k>   :action MethodUp<CR>
 
 " Move actions
-nnoremap <S-j>   :action MoveLineDown<CR>
-nnoremap <S-k>   :action MoveLineUp<CR>
+nnoremap <C-S-j>   :action MoveLineDown<CR>
+nnoremap <C-S-k>   :action MoveLineUp<CR>
 
 " Goto
 nnoremap gi  :action GotoImplementation<CR>
@@ -69,25 +71,27 @@ nnoremap gD  :action FindUsages<CR>
 
 " Leader Key Mapping
 " =========================================
-" Apply macro
-nnoremap <Leader>ma @q
-r Create new File
-nnoremap <Leader>ne :action NewElement<CR>
 
+" Apply macro
+nnoremap <leader>ma @q
+
+" Create new File
+nnoremap <leader>ne :action NewElement<CR>
+nnoremap <leader>nf :action NewFile<CR>
 " Update Config - Build <C-S-O>
 nnoremap <leader>vrr    :source ~/.ideavimrc<CR>
 nnoremap <leader>hrr    :action ExternalSystem.ProjectRefreshAction<CR>
 
 " Menu
-nnoremap <Leader>mm :action MainMenu<CR>
+nnoremap <leader>mm :action MainMenu<CR>
 
 " Docs
 nnoremap <leader>j   :action QuickJavaDoc<CR>
-
+nnoremap <leader>ee   :action ShowErrorDescription<CR>
 " Search
 nnoremap <leader><leader> :action GotoFile<CR>
 nnoremap <leader>sr       :action RecentFiles<CR>
-nnoremap <Leader>ss       /
+nnoremap <leader>ss       /
 nnoremap <leader>sa       :action GotoAction<CR>
 nnoremap <leader>se       :action SearchEverywhere<CR>
 nnoremap <leader>sf       :action FindInPath<CR>
@@ -101,15 +105,10 @@ nnoremap <leader>pv :action ActivateProjectToolWindow<CR>
 nnoremap <leader>ps :action SelectInProjectView<CR>
 
 " Code Format
-nnoremap <leader>cf :action ReformatCode<CR>
-nnoremap <leader>co :action OptimizeImports<CR>
 nnoremap <leader>cc :action SilentCodeCleanup<CR>:action ReformatCode<CR>:action OptimizeImports<CR>
 
 "Terminal
 nnoremap <leader>to :action ActivateTerminalToolWindow<CR>
-
-" Database Settings
-nnoremap <Leader>db :action ActivateDatabaseToolWindow<CR>
 
 " Close active Tab
 map <leader>q :action CloseContent<CR>
@@ -121,41 +120,43 @@ map <leader>dp :action TogglePresentationMode<CR>
 " Method Refactor
 nnoremap <leader>rq    :action Refactorings.QuickListPopupAction<CR>
 nnoremap <leader>rn    :action RenameElement<CR>
+nnoremap <leader>rv    :action IntroduceVariable<CR>
 
 " Run
-nnoremap <Leader>rr :action RunClass<CR>
-nnoremap <Leader>rt :action RunTest<CR>
-nnoremap <Leader>ru :action Rerun<CR>
+nnoremap <leader>rr :action RunClass<CR>
+nnoremap <leader>rtt :action RunTest<CR>
+nnoremap <leader>rtc :action RunCoverage<CR>
+nnoremap <leader>ru :action Rerun<CR>
 nnoremap <leader>rs :action Stop<CR>
-nnoremap <leader>rg :action ChooseRunConfiguration<CR>
+nnoremap <leader>rc :action ChooseRunConfiguration<CR>
 nnoremap <leader>rd :action ChooseDebugConfiguration<CR>
-nnoremap <Leader>rc :action RunCoverage<CR>
+
 
 " Debug
 nnoremap <leader>dd    :action Debug<CR>
-nnoremap <Leader>da    :action ToggleLineBreakpoint<CR>
-nnoremap <Leader>dA    :action ToggleMethodBreakpoint<CR>
+nnoremap <leader>da    :action ToggleLineBreakpoint<CR>
+nnoremap <leader>dA    :action ToggleMethodBreakpoint<CR>
 
 " Window Splits
-nnoremap <Leader>wv <C-w>v<CR>
-nnoremap <Leader>ws <C-w>s<CR>
-nnoremap <Leader>ww <C-w>w<CR>
+nnoremap <leader>wv <C-w>v<CR>
+nnoremap <leader>ws <C-w>s<CR>
+nnoremap <leader>ww <C-w>w<CR>
 
-nnoremap <Leader>wu :action Unsplit<CR>
-nnoremap <Leader>wh :action HideAllWindows<CR>
-nnoremap <Leader>wo :action ChangeSplitOrientation<CR>
+nnoremap <leader>wu :action Unsplit<CR>
+nnoremap <leader>wh :action HideAllWindows<CR>
+nnoremap <leader>wo :action ChangeSplitOrientation<CR>
 
 " Errors
 nnoremap <leader>en :action GotoNextError<CR>
 nnoremap <leader>ep :action GotoPreviousError<CR>
 
 " Build
+
 "rust
 nnoremap <leader>bc :action Rust.Cargo<CR>
+
 "maven
 nnoremap <leader>bm :action Maven.NavigatorActionsToolbar<CR>
-"gradle
-nnoremap <leader>bg :action ExternalSystemView.ActionsToolbar<CR>
 
 " Git
 nnoremap <leader>gp :action Github.View.Pull.Request<CR>
