--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,25 +1,14 @@
 [youtube-music]
-command=~/.config/i3/scripts/youtube-music-title
+command=~/.config/i3/scripts/youtube-music-title.py
 min_width=1820
 align=center
 interval=1
 
-[keyboard-layout]
-command=~/.config/i3/scripts/keyboard_layout
+[keyboard]
+command=~/.config/i3/scripts/keyboard_layout.py
 interval=1
 
-[time]
-command=~/.config/i3/scripts/date_jp
+[date]
+command=~/.config/i3/scripts/date_jp.py
 interval=1
 
-[volume-pulseaudio]
-command=~/.config/i3/scripts/volume
-interval=1
-
-[brightness]
-command=~/.config/i3/scripts/brightness
-interval=1
-
-[battery]
-command=~/.config/i3/scripts/battery_status
-interval=1
