--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,8 +2,8 @@ import = [ "~/.config/alacritty/gruvbox_light.toml"
 ]
 
 [shell]
-program = '/bin/sh'  
-args = ["-c", "zellij -l layout.kdl"]
+program = 'zellij'  
+
 [env]
 TERM = "xterm-256color"
 
@@ -26,9 +26,11 @@ style = "Regular"
 [font]
 size = 15.0
 
-
 [selection]
 save_to_clipboard = true
 
 [mouse]
 hide_when_typing = true
+
+[window]
+decorations = "none"
