--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,14 +1,25 @@
 [youtube-music]
-command=~/.config/i3/scripts/youtube-music-title.py
+command=~/.config/i3/scripts/youtube-music-title.sh
 min_width=1820
 align=center
 interval=1
 
 [keyboard]
-command=~/.config/i3/scripts/keyboard_layout.py
+command=~/.config/i3/scripts/keyboard_layout.sh
 interval=1
 
 [date]
-command=~/.config/i3/scripts/date_jp.py
+command=~/.config/i3/scripts/date_jp.sh
 interval=1
 
+[brightness]
+command=~/.config/i3/scripts/brightness.sh
+interval=1
+
+[volume]
+command=~/.config/i3/scripts/volume.sh
+interval=1
+
+[battery_status]
+command=~/.config/i3/scripts/battery_status.sh
+interval=1
