--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,25 +1,35 @@
+color=#282828
+separator=false
+separator_block_width=20
+align=center
+
 [youtube-music]
 command=~/.config/i3/scripts/youtube-music-title.sh
-min_width=1780
-align=center
+min_width=1575
 interval=1
 
 [keyboard]
+label= 
 command=~/.config/i3/scripts/keyboard_layout.sh
 interval=1
 
-[date]
-command=~/.config/i3/scripts/date_jp.sh
-interval=1
-
 [brightness]
+label=☀ 
+color=#282828 
 command=~/.config/i3/scripts/brightness.sh
 interval=1
 
 [volume]
+label= 
 command=~/.config/i3/scripts/volume.sh
 interval=1
 
 [battery_status]
 command=~/.config/i3/scripts/battery_status.sh
 interval=1
+
+[date]
+label= 
+command=date '+%a/%d/%b %H:%M:%S'
+interval=1
+
