--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,6 @@
 [core]
     autocrlf = input
     safecrlf = true
-    defaultBranch = main
 	editor = nvim
 
 [commit]
@@ -22,13 +21,17 @@
     tool = nvim -d
 
 [alias]
-    s = status
-    st = status
-    lg = log --oneline
-    last = log -1 HEAD
-    cl = log -p -- ':(exclude)Cargo.lock'
-    pf = push --force-with-lease
-    sl = stash list
+	c = commit
+	s = status
+	st = status
+	lg = log --oneline
+	last = log -1 HEAD
+	f = push --force-with-lease
+	# https://stackoverflow.com/a/11688523/472927
+	ss = "!f() { git stash show stash^{/$*} -p; }; f"
+	sa = "!f() { git stash apply stash^{/$*}; }; f"
+	sl = stash list
+	tree = "log --graph --topo-order --pretty='%w(100,0,6)%C(#b57614)%h%C(bold)%C(#665c54)%d %C(#d65d0e)%ar %C(#689d6a)%an%n%C(bold)%C(#7c6f64)%s %N' --abbrev-commit"
 
 [pull]
     ff = only
@@ -46,3 +49,5 @@
 	algorithm = histogram
 	indentHeuristic = true
 
+[init]
+	defaultBranch = main
