--- a/.gitconfig
+++ b/.gitconfig
@@ -25,7 +25,7 @@
 	s = status
 	st = status
 	lg = log --oneline
-	last = log -1 HEAD
+	last = log -1 HEAD --stat
 	f = push --force-with-lease
 	# https://stackoverflow.com/a/11688523/472927
 	ss = "!f() { git stash show stash^{/$*} -p; }; f"
