--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,4 +1,7 @@
+# gruvbox-light-soft
 color=#282828
+# gruvbox-dark-soft
+# color=#d4be98
 separator=false
 separator_block_width=20
 align=center
@@ -15,7 +18,6 @@ interval=1
 
 [brightness]
 label=☀ 
-color=#282828 
 command=~/.config/i3/scripts/brightness.sh
 interval=1
 
